fix: fixed navbar__search_mobile_visible media 576

--- a/css/style.css
+++ b/css/style.css
@@ -1567,6 +1567,9 @@ template {
     width: 100%;
     height: 100%;
   }
+  .navbar__search_mobile_visible {
+    flex-basis: 70%;
+  }
   .newsletter {
     padding: 76px 0 83px 0;
   }
@@ -1656,12 +1659,6 @@ template {
     left: 0;
     top: 50px;
     right: 50%;
-  }
-}
-
-@media (max-width: 320px) {
-  .navbar__search_mobile_visible {
-    flex-basis: 70%;
   }
 }
 /*# sourceMappingURL=style.css.map */
