--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -303,6 +303,13 @@
       width: 100%
       height: 100%
 
+  .navbar
+    &__search
+      &_mobile
+        &_visible
+          flex-basis: 70%
+
+
   .newsletter
     padding: 76px 0 83px 0
     &__titel
@@ -384,12 +391,3 @@
       top: 50px
       right: 50%
 
-@media (max-width: 320px)
-  .navbar
-    &__search
-      &_mobile
-        &_visible
-          flex-basis: 70%
-
-  .footer
-    &__button
